chore(): Simplify stream thanks to java17